<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <TextView
        android:id="@+id/report_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/info_report"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textAlignment="center"
        android:gravity="center"
        android:background="#777"
        />
    <Button
        android:id="@+id/report_parked"
        android:layout_below="@id/report_title"
        android:inputType="number"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/report_parked"
        />
    <Button
        android:id="@+id/report_left"
        android:layout_below="@id/report_parked"
        android:inputType="number"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/report_left"
        />
    <Button
        android:id="@+id/report_bad"
        android:layout_below="@id/report_left"
        android:inputType="number"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/report_bad"
        />
    <Button
        android:id="@+id/report_help"
        android:layout_below="@id/report_bad"
        android:inputType="number"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/report_help"
        />
    </RelativeLayout>
</LinearLayout>